<?xml version="1.0"?>
<package format="2">
  <name>mpros_navigation_map</name>
  <version>1.0.0</version>
  <description>The mpros_navigation_map package</description>
  <maintainer email="st169214@stud.uni-stuttgart.de">Changxuan Li</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>tf2</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
