<?xml version="1.0"?>
<package format="2">
  <name>mpros_planner</name>
  <version>0.0.0</version>
  <description>The planner package</description>
  <maintainer email="st169214@stud.uni-stuttgart.de">Changxuan Li</maintainer>
  <license>TODO</license>

  <author email="st169214@stud.uni-stuttgart.de">Changxuan Li</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vehicle_control</exec_depend>
  <depend>tf2</depend>
  
  <depend>mpros_navigation_map</depend>
  <depend>mpros_smoother</depend>
  <depend>mpros_utils</depend>
  <depend>mpros_speed_profile</depend>
  <depend>mpros_rs_path</depend>
  <depend>mpros_algorithm</depend>
  <depend>mpros_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
