<?xml version="1.0"?>
<package format="2">
  <name>mpros_rs_path</name>
  <version>1.0.0</version>
  <description>The package generates Reeds-Shepp path</description>
  <maintainer email="st169214@stud.uni-stuttgart.de">Changxuan Li</maintainer>
  <license>TODO</license>

  <author email="st169214@stud.uni-stuttgart.de">Changxuan Li</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mpros_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>mpros_utils</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>mpros_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
