<?xml version="1.0"?>
<package format="2">
  <name>mpros_utils</name>
  <version>1.0.0</version>
  <description>The mpros utils package</description>
  <maintainer email="st169214@stud.uni-stuttgart.de">Changxuan Li</maintainer>
  <license>TODO</license>

  <author email="st169214@stud.uni-stuttgart.de">Changxuan Li</author>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
